<?xml version="1.0" encoding="utf-8"?><!--
    The Phoenix Hospitality Management System
    Phoenix Database Manager App Source Code
    String Values XML Definition File
    Copyright (c) 2020 By Troy Marker Enterprises
    All Rights Under Copyright Reserved

    The code in this file was created for use with the Phoenix Hospitality Management System (PHMS).
    Use of this code outside the PHMS is strictly prohibited.
-->
<resources>
    <string name="app_name">Phoenix Database Managers</string>
    <string name="blank"> </string>
    <string name="created">Created</string>
    <string name="var_department">Department</string>
    <string name="var_grade">Grade</string>
    <string name="var_user">User</string>
    <string name="var_username">username</string>
    <string name="var_password">password</string>
    <string name="error">ERROR: %1$s</string>
    <string name="success">SUCCESS: %1$s</string>
    <string name="close">CLOSE</string>
    <string name="exit">EXIT</string>
    <string name="refresh">REFRESH SCREEN</string>
    <string name="phoenix_logo">Phoenix Logo</string>
    <string name="id">ID</string>
    <string name="title_list">%1$s %2$s List</string>
    <string name="title_add">%1$s Add %2$s</string>
    <string name="title_remove">%1$s Remove %2$s</string>
    <string name="title_update">%1$s Update %2$s</string>
    <string name="button_update">Update %1$s</string>
    <string name="button_add">Add %1$s</string>
    <string name="button_delete">Delete %1$s</string>
    <string name="remove_question">Are you sure you want to remove %1$s: %2$s</string>
    <string name="password">Password:</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_details">%1$s Details</string>
    <string name="item_pricing">%1$s Pricing</string>
    <string name="InventoryListTitle">%1$s Inventory List</string>
    <string name="InventorySupplier">Supplier: </string>
    <string name="InventoryCategory">Category: </string>
    <string name="InventorySubCategory">Subcategory: </string>
    <string name="SupplierName">Name: </string>
    <string name="SupplierAccount">Account: </string>
    <string name="SupplierPhone">Phone Number: </string>
    <string name="SupplierFax">Fax Number: </string>
    <string name="SupplierWebsite">Website: </string>
    <string name="AddSupplier">Add Supplier</string>
    <string name="unexpected">Unexpected value: </string>
    <string name="settingmissing">\nRequired setting missing.\nPlease (re)run Phoenix Install App</string>
    <string name="nologged">\nNo Logged User.\nPlease launch app from the Phoenix Launcher</string>
    <string name="adminreq">Administrator Grade Required.\nAdministrator Rights required to use this app</string>
    <string name="required">A %1$s name is required</string>
    <string name="created1">%1$s successfully created.</string>
    <string name="updated">%1$s successfully updated.</string>
    <string name="deletefail">Unable to delete %1$s</string>
    <string name="loadfail">Failed loading %1$s information</string>
    <string name="fail_load_list">Failed loading %1$s list.</string>
    <string name="select">Select a %1$s</string>
    <string name="required1">A %1$s is required.</string>
    <string name="not_admin">Cannot remove built in administrator.</string>
    <string name="failed_loading">Failed loading %1$s list.</string>
    <string name="supplier">Supplier</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="item">Item</string>
    <string name="item_number">Item Number</string>
    <string name="item_description">Item Description: </string>
    <string name="tier">Tier</string>
    <string name="count">Count</string>
    <string name="cost_each">Cost/Each</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
     <string name="inventory_count">Inventory Count:</string>
    <string name="Case">/ Case</string>
    <string name="case_count">Case Count:</string>
    <string name="description">Description:</string>
    <string name="edit_details">Edit Details</string>
    <string name="save_details">Save Details</string>
    <string name="item_group_selection">Item Group Selection</string>
    <string name="save_pricing">Save Pricing</string>
    <string name="edit_pricing">Edit Pricing</string>
    <string name="pricing_details">Could not save pricing details</string>
    <string name="website">Website:</string>
    <string name="save_supplier">Save Supplier</string>
</resources>