<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/user_remove_title"
        android:textSize="36sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtUserRemoveQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textSize="36sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnYes"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/x_red_button"
                android:paddingTop="50dp"
                android:text="@string/yes"
                android:textColor="@color/Phoenix_Black" />
            <Button
                android:id="@+id/btnNo"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/x_green_button"
                android:paddingTop="50dp"
                android:text="@string/no"
                android:textColor="@color/Phoenix_Black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>